# cslibs_boost_geometry

./: .gitlab-ci.yml  CMakeLists.txt  package.xml
cmake/: FindGTest.cmake  cslibs_boost_geometry_extras.cmake  cslibs_boost_geometry_omp.cmake
include/cslibs_boost_geometry/: algorithms.h  algorithms.hpp  linefit_lsq.h  linefit_lsq.hpp  types.hpp
include/utils_boost_geometry/: algorithms.h  algorithms.hpp  linefit_lsq.h  linefit_lsq.hpp  types.hpp
src/: algorithms.cpp  linefit_lsq.cpp  test.cpp
src/tests/: points_and_lines.hpp  test_distance.cpp  test_equality.cpp  test_nearest_intersection_batch.cpp  test_nearest_intersection_dist_batch.cpp  test_translation.cpp
test/: points_and_lines.hpp  test_distance.cpp  test_equality.cpp  test_intersection.cpp  test_line_angles.cpp  test_nearest_intersection.cpp  test_nearest_intersection_batch.cpp  test_nearest_intersection_dist.cpp  test_nearest_intersection_dist_batch.cpp  test_polar_line_set.cpp  test_polygons.cpp  test_rotation.cpp  test_translation.cpp
