<?xml version="1.0"?>
<package>
  <name>cslibs_boost_geometry</name>
  <version>0.0.1</version>
  <description>
    This package contains geometrical data types and algorithms
    which are not provided by the Eigen3 library. The package
    content focuses intersection and inlying calculations.
  </description>

  <author email="richard.hanten@uni-tuebingen.de">hanten</author>
  <author email="sebastian.buck@uni-tuebingen.de">buck</author>
  <maintainer email="richard.hanten@uni-tebingen.de">hanten</maintainer>
    

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boost</build_depend>
  
  <run_depend>boost</run_depend>

  <export>
  </export>
</package>
